aula12/projeto/networkpolicy/pod-client.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-client
  labels:
    app: client
spec:
  containers:
  - name: alpine
    image: alpine:3.12.12
    imagePullPolicy: IfNotPresent
    command:
      - sleep
      - "3600"
    resources:
      requests:
        memory: "64Mi"
        cpu: "0.1"
      limits:
        memory: "128Mi"
        cpu: "0.2"
