aula12/projeto/networkpolicy/2-networkpolicy-ns-bigdata.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-from-ns-bigdata-backend
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: client
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: bigdata
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: backend
